Add author titles to images

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     <div class="Middle">
         <div class="top">Top Locations</div>
         <ul class="images">
-            <li><img class="FeatureImage" src="images/pexels-spencer-davis-4353632.jpg"></li>
-            <li></li><img class="FeatureImage" src="images/pexels-tiago-cardoso-2495575.jpg"></li>
-            <li></li><img class="FeatureImage" src="images/pexels-nirav-shah-7320158.jpg"></li>
-            <li></li><img class="FeatureImage" src="images/pexels-thais-cordeiro-3874262.jpg"></li>
+            <li><img class="FeatureImage" src="images/pexels-spencer-davis-4353632.jpg">Split, Croatia. Image from Spencer Davis</li>
+            <li></li><img class="FeatureImage" src="images/pexels-tiago-cardoso-2495575.jpg">Angkor, Cambodia. Image from Tiago Cardosa</li>
+            <li></li><img class="FeatureImage" src="images/pexels-nirav-shah-7320158.jpg">Nanyuki, Kenya. Image by Nirav Shah</li>
+            <li></li><img class="FeatureImage" src="images/pexels-thais-cordeiro-3874262.jpg">Santiago, Chile. Image by Thais Cordeiro</li>
         </ul>
     </div>
     <div class="Quote">Our trip to Tora Bora was absolutely carefree and wonderful,
