Aligned images, added quote and ads

--- a/index.html
+++ b/index.html
@@ -33,23 +33,37 @@
     </div>
     <div class="Middle">
         <div class="top">Top Locations</div>
-        <ul class="images">
-            <li><img class="FeatureImage" src="images/pexels-spencer-davis-4353632.jpg">Split, Croatia. Image from Spencer Davis</li>
-            <li></li><img class="FeatureImage" src="images/pexels-tiago-cardoso-2495575.jpg">Angkor, Cambodia. Image from Tiago Cardosa</li>
-            <li></li><img class="FeatureImage" src="images/pexels-nirav-shah-7320158.jpg">Nanyuki, Kenya. Image by Nirav Shah</li>
-            <li></li><img class="FeatureImage" src="images/pexels-thais-cordeiro-3874262.jpg">Santiago, Chile. Image by Thais Cordeiro</li>
-        </ul>
+        <div class="images">
+            <figure class="Figures">
+                <img class="FeatureImage" src="images/pexels-spencer-davis-4353632.jpg"> 
+                <figcaption class="caption">Split, Croatia. <br>Courtesy of Spencer Davis</figcaption>
+            </figure>
+            <figure class="Figures">
+                <img class="FeatureImage" src="images/pexels-tiago-cardoso-2495575.jpg"> 
+                <figcaption class="caption">Angkor, Cambodia.<br>Courtesy of Tiago Cardosa</figcaption>
+            </figure>
+            <figure class="Figures">
+                <img class="FeatureImage" src="images/pexels-nirav-shah-7320158.jpg"> 
+                <figcaption class="caption">Nanyuki, Kenya. <br>Courtesy of Nirav Shah</figcaption>
+            </figure>
+            <figure class="Figures">
+                <img class="FeatureImage" src="images/pexels-thais-cordeiro-3874262.jpg"> 
+                <figcaption class="caption">Santiago, Chile. <br>Courtesy of Thais Cordeiro</figcaption>
+            </figure>
+        </div>
     </div>
-    <div class="Quote">Our trip to Tora Bora was absolutely carefree and wonderful,
-        and we would have never had the chance to go without Your Future Travels -Hilary Ouse, Comedian
+    <div class="Quote"> 
+        <div class="QuoteText">Our trip was absolutely carefree and wonderful,
+            and we would have never had the chance to go without <u>Your Future Travels</u></div>
+        <div class="Sig">-Jocelyn Butler, Tora Bora 2021</div>
     </div>
     <div class="Ad">
         <div class="text">
-            <div class="top">Adventure awaits. Why should you?</div>
-            <div class="bot">Plan your trip today</div>
+            <div class="topAd">Adventure awaits. Why should you?</div>
+            <div class="bot">Plan your trip today!</div>
         </div>
-        <button class="botButton">Featured Trips</button>
+        <button class="topButton botButton">Featured Trips</button>
     </div>
-    <div class="footer">Copyright The Odin Project 2022</div>
+    <div class="footer">Copyright © The Odin Project 2022</div>
 </body>
 </html>
