Add flex-wrap to images

--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
         <div class="images">
             <figure class="Figures">
                 <img class="FeatureImage" src="images/pexels-spencer-davis-4353632.jpg"> 
-                <figcaption class="caption">Split, Croatia. <br>Courtesy of Spencer Davis</figcaption>
+                <figcaption class="caption">Split, Croatia <br>Courtesy of Spencer Davis</figcaption>
             </figure>
             <figure class="Figures">
                 <img class="FeatureImage" src="images/pexels-tiago-cardoso-2495575.jpg"> 
-                <figcaption class="caption">Angkor, Cambodia.<br>Courtesy of Tiago Cardosa</figcaption>
+                <figcaption class="caption">Angkor, Cambodia<br>Courtesy of Tiago Cardosa</figcaption>
             </figure>
             <figure class="Figures">
                 <img class="FeatureImage" src="images/pexels-nirav-shah-7320158.jpg"> 
-                <figcaption class="caption">Nanyuki, Kenya. <br>Courtesy of Nirav Shah</figcaption>
+                <figcaption class="caption">Nanyuki, Kenya <br>Courtesy of Nirav Shah</figcaption>
             </figure>
             <figure class="Figures">
                 <img class="FeatureImage" src="images/pexels-thais-cordeiro-3874262.jpg"> 
-                <figcaption class="caption">Santiago, Chile. <br>Courtesy of Thais Cordeiro</figcaption>
+                <figcaption class="caption">Santiago, Chile <br>Courtesy of Thais Cordeiro</figcaption>
             </figure>
         </div>
     </div>
